--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_CXX_FLAGS "-Wall -std=c++14 -fexceptions -frtti -DLOG_TAG_NAME='\"TR\"'")
 if(CMAKE_ANDROID_STANDALONE_TOOLCHAIN)
-  message("Building shared TRC library for Android...")
+  message("Building shared sockspp library for Android...")
 
   set(BUILD_SHARED_LIBRARY TRUE)
 
@@ -15,11 +15,11 @@ ELSE()
 endif()
 
 if(NOT BUILD_RELEASE)
+  message("Building for debug")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLOG_VERBOSE -g")
-  set(CMAKE_C_FLAGS "-Wall -g")
 else()
+  message("Building for release")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLOG_DEBUG -O3")
-  set(CMAKE_C_FLAGS "-Wall -03")
 endif()
 
 find_package(Threads REQUIRED)
